--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -48,7 +48,7 @@ font-size: 1rem;
 </div>
 
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/listings/new">Airbnb your home</a>
+          <a class="nav-link" href="/listings/new">Home Zone</a>
           <% if(!currUser){ %>
           <a class="nav-link"  href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
